# Trainees_2026.1-Pauta

./: .gitignore  .mcp.json  Makefile  README.md  docker-compose.yml  package-lock.json
back/: .env.example  pyproject.toml
back/alembic/versions/: 0001_initial.py
back/app/: main.py
back/app/db/: session.py
back/app/models/: __init__.py  evento.py  user.py
back/app/routers/: notificacoes.py  usuarios.py
back/app/schemas/: recomendacao.py
back/app/workers/: celery_app.py
back/app/workers/providers/: fcm.py
back/tests/: conftest.py
client/: .env.example  next.config.ts  package-lock.json  package.json
client/public/: firebase-messaging-sw.js
client/src/: middleware.ts
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/app/auth/: actions.ts
client/src/app/candidatos/: CandidatoCard.tsx  CandidatosGrid.tsx  CandidatosNav.tsx  SeguirButton.tsx  layout.tsx  page.tsx
client/src/app/conta/: AccountNav.tsx  layout.tsx  page.tsx
client/src/app/feed/: Composer.tsx  FeedGate.tsx  (+2 more)
client/src/lib/: nav.ts  politico-foto.ts  problema-status.ts
docs/superpowers/manual/: 2026-06-08-fatia-2-verification.md
docs/superpowers/specs/: 2026-06-03-fatia-1-5-hmac-autor-design.md  2026-06-03-fatia-1-minha-pauta-design.md  2026-06-03-landing-redesign-design.md
front/: package.json
front/src/app/: layout.tsx  page.tsx
infra/db/: Dockerfile
pre-processing/: df_nlp_final.csv  preprocess.ipynb
pre-processing/data/: vereador_pauta.csv  vereador_pauta.jsonl
recommendation/: documentacao.md  pyrefly.toml  requirements.txt
recommendation/data/: df_nlp_filtrado.csv  df_perfil.csv
recommendation/models/: autoencoder.pt  embeddings.npy  embeddings_meta.csv  latent.npy
recommendation/src/: autoencoder.py  clustering.py  embeddings.py  index.py  recommend.py  train.py  workflow.md
recommendation/src/notebooks/: 1_embeddings.ipynb  2_autoencoder.ipynb  3_clustering.ipynb  4_recomendacao.ipynb
scrapers/: scraping.ipynb
scrapers/data/: vereador_propostas_long.csv
server/: .env.example  credenciais_firebase.json  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 0001_initial.py  0002_politico_foto_url.py  0003_cascade_users_fks.py  0004_politicos_nulls_not_distinct.py  0005_outbox_chronological_index.py  0006_expand_ck_problemas_status.py  0007_expand_ck_outbox_tipo.py  0008_remove_pii_users.py  0009_rls_e_view_publica.py  0010_hmac_autor.py  0011_pgcrypto_e_refactor_problemas.py  0011_user_email_for_notifications.py  0012_criar_publicacoes.py  0012_notificacoes_internas.py  0013_tipos_visao_cloudflare.py  0013_user_email_for_notifications.py  0014_notificacoes_internas.py  0014_user_email_for_notifications.py  0015_notificacoes_internas.py
server/app/: main.py
server/app/cli/: seed_politicos.py  seed_vetores.py
server/app/core/: auth.py  config.py  cripto_autor.py  hmac_autor.py
server/app/db/: base.py
server/app/models/: __init__.py  evento.py  inscricao.py  notificacao.py  politico.py  problema.py  publicacao.py  user.py
server/app/routers/: feed.py  notificacoes.py  politicos.py  problemas.py  publicacoes.py  recomendacoes.py  usuarios.py
server/app/schemas/: feed.py  problema.py  publicacao.py  recomendacao.py
server/app/services/: eventos.py  imagem.py  notificacoes.py  notificacoes_internas.py  recomendacao.py  storage.py  usuarios_geo.py  visao.py
server/app/workers/: celery_app.py  tasks.py
server/app/workers/providers/: email_sender.py  fcm.py
server/data/: df_perfil.csv
server/tests/: conftest.py  test_alembic_env.py  test_auth_optional.py  test_autor_hmac.py  test_cripto_autor.py  test_feed.py  test_meu_problema_detalhe.py  test_meus_problemas.py  test_migration_0002.py  test_migration_0003.py  test_migration_0004.py  test_migration_0005.py  test_migration_0006.py  test_migration_0007.py  test_migration_0009_auth_uid.py  test_migration_0011.py  test_migration_0012.py  test_migration_chain.py  test_notificacoes_internas.py  test_notificacoes_outbox.py  test_politicos.py  test_problemas.py  test_problemas_table.py  test_publicacoes.py  test_recomendacao.py  test_rls.py  test_seed_politicos.py  test_seed_vetores.py  test_users_table.py  test_visao.py
(+78 files in other folders)
