[project]
name = "pauta-back"
version = "0.1.0"
description = "Pauta — backend FastAPI (espinha dorsal: problemas/geo, recomendação, eventos)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0.36",
    "geoalchemy2>=0.16",
    "pgvector>=0.3.6",
    "psycopg[binary]>=3.2",
    "alembic>=1.14",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-jose[cryptography]>=3.3",
    "pillow>=11.0",
    "supabase>=2.10",
    "python-multipart>=0.0.12",
    "celery[redis]>=5.3",
    "redis>=5.0",
    "resend>=2.0",
    "firebase-admin>=6.0"
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.File",
    "fastapi.Form",
    "fastapi.Body",
    "fastapi.Header",
    "fastapi.Path",
    "fastapi.Cookie",
]

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*" = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
exclude = ["alembic/versions/"]
